--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.emoji {
-    display: inline-block;
-    width: auto;
-    height: 1.5em;
-    vertical-align: -0.250em;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
